--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -4,11 +4,11 @@
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
         <item android:id="@+id/nav_account"
-
-            android:title="Accounts"/>
+            android:icon="@drawable/ic_sms_black_24dp"
+            android:title="Full statistics"/>
         <item android:id="@+id/nav_set"
-
-            android:title="Stettings"/>
+            android:icon="@drawable/ic_location_on_black_24dp"
+            android:title="Get location"/>
 
     </group>
 
