--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,12 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_account"
+        <item android:id="@+id/nav_statistics"
             android:icon="@drawable/ic_sms_black_24dp"
             android:title="Full statistics"/>
-        <item android:id="@+id/nav_set"
+        <item android:id="@+id/nav_critical"
             android:icon="@drawable/ic_location_on_black_24dp"
-            android:title="Get location"/>
+            android:title="location of critical sewers"/>
+        <item android:id="@+id/nav_informative"
+            android:icon="@drawable/ic_location_on_black_24dp"
+            android:title="location of informative sewers"/>
+        <item android:id="@+id/nav_normal"
+            android:icon="@drawable/ic_location_on_black_24dp"
+            android:title="location of normal sewers "/>
+        <item android:id="@+id/nav_ground"
+            android:icon="@drawable/ic_location_on_black_24dp"
+            android:title="location of ground sewers "/>
+
 
     </group>
 
