--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -19,5 +19,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Techtronix limited"/>
+        android:text="Vysion limited"/>
 </LinearLayout>
