--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
+        <!--<item android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home_black"
+            android:title="Home"/>-->
+        <item android:id="@+id/nav_Home"
+            android:icon="@drawable/ic_home_black"
+            android:title="Home"/>
         <item android:id="@+id/nav_statistics"
             android:icon="@drawable/ic_sms_black_24dp"
             android:title="Full statistics"/>
@@ -18,6 +24,9 @@
         <item android:id="@+id/nav_ground"
             android:icon="@drawable/ic_location_on_black_24dp"
             android:title="location of ground sewers "/>
+        <item android:id="@+id/nav_status"
+            android:icon="@drawable/ic_battery_80_black_24dp"
+            android:title="Battery Status "/>
 
 
     </group>
