--- a/app/src/main/res/layout/fragment_health_report.xml
+++ b/app/src/main/res/layout/fragment_health_report.xml
@@ -5,19 +5,18 @@
 
     >
 
-    <LinearLayout
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@+id/status">
 
-        <ListView
-            android:paddingTop="72dp"
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click to get Report"
+        android:textSize="20sp"
+        android:id="@+id/healthReport_button"
+        android:layout_centerInParent="true"
+        android:padding="18dp"
+
+        />
     <LinearLayout
         android:id="@+id/status"
         android:layout_width="match_parent"
@@ -132,4 +131,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</>
