--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,6 +12,9 @@
         <item android:id="@+id/nav_statistics"
             android:icon="@drawable/ic_sms_black_24dp"
             android:title="Full statistics"/>
+        <item android:id="@+id/nav_health"
+            android:icon="@drawable/ic_sms_black_24dp"
+            android:title="Health Report"/>
         <item android:id="@+id/nav_critical"
             android:icon="@drawable/ic_location_on_black_24dp"
             android:title="location of critical sewers"/>
